# ResNet-Accel

./: Makefile.verilator  README.md  migrat  tb_bsr_dma.vvp
.devcontainer/: devcontainer.json
ResNet-Accel/: README.md
ResNet-Accel/docs/: ARCHITECTURE.md
ResNet-Accel/hw/: README.md
accel v1/: COCOTB_TESTING_GUIDE.py  DELIVERABLES_INDEX.md  EXECUTION_SUMMARY.md  INTEGRATION_SUMMARY.md  STEP3_COMPLETE.md  TEST_RESULTS.md  VERIFICATION_CHECKLIST.md  quick_test.sh
accel v1/docs/: HOST_RS_TILER.md  PROJECT_COMPLETION_SUMMARY.md  ROW_STATIONARY_DATAFLOW.md  WEIGHT_FLOW_ANIMATION.txt
accel v1/python/INT8 quantization/: quantize old.py  quantize.py
accel v1/python/MNIST CNN/: train_mnist.py
accel v1/python/exporters/: __init__.py  export_conv.py  export_mlp.py  export_transformer.py
accel v1/python/golden/: gemm_bsr_int8.py
accel v1/python/golden_models/: gemm_int8.py  golden_mac8.py
accel v1/python/host/: axi_driver.py  axi_master_sim.py  spi_driver.py
accel v1/python/host_uart/: csr_map.py  run_gemm.py  uart_driver.py
accel v1/python/tests/: post_training_quant_tests.py  test_csr_pack.py  test_edges.py  test_exporters.py  test_golden_models.py  test_integration.py  test_mac.py
accel v1/python/training/: blocksparse_train.py  export_bsr.py
accel v1/python/utils/: golden_c_tile.py
accel v1/tb/: Makefile.cocotb  cocotb_axi_master_test.py  tb_axi.vvp
accel v1/tb/integration/: tb_accel_tile.sv  tb_axi_host.sv
accel v1/tb/unit/: tb_bsr_dma.sv  tb_perf.sv
accel v1/verilog/: accel_top_tb
accel v1/verilog/dma/: bsr_dma.v
accel v1/verilog/host_iface/: Makefile  axi_dma_bridge.sv  axi_lite_slave.sv  axi_lite_slave_v2.sv  spi_slave.sv  tb_axi_lite_slave.sv  tb_axi_lite_slave_enhanced.sv  test.vvp
accel v1/verilog/monitor/: perf.v
accel v1/verilog/top/: accel_top.v
accel/python/host/: axi_driver.py
accel/python/training/: export_bsr.py
docs/: DEEP_DIVE.md  ELITE_TRAINING_SCHEDULE.md  architecture_spec.md  zynq_ports_guide.md
docs/guides/: POWER_OPTIMIZATION_ADVANCED.md
hw/: README.md
hw/rtl/buffer/: act_buffer.sv  output_accumulator.sv  wgt_buffer.sv
hw/rtl/control/: bsr_scheduler.sv  csr.sv  scheduler.sv
hw/rtl/dma/: act_dma.sv  bsr_dma.sv
hw/rtl/host_iface/: axi_dma_bridge.sv  axi_lite_slave.sv
hw/rtl/mac/: mac8.sv
hw/rtl/meta/: meta_decode.sv
hw/rtl/monitor/: perf.sv
hw/rtl/systolic/: pe.sv  systolic_array_sparse.sv
hw/rtl/top/: accel_top.sv
hw/sim/: test_accel_verilator.cpp  verify_rtl.py
hw/sim/cpp/: CMakeLists.txt  CPP_FILE_SPECIFICATIONS.md  IMPLEMENTATION_STATUS.md  README.md  main.cpp
hw/sim/cpp/examples/: deploy_example.cpp  deploy_fpga  deploy_sim
hw/sim/cpp/include/: accelerator_driver.hpp  axi_master.hpp  bsr_packer.hpp  csr_map.hpp  golden_models.hpp  memory_manager.hpp  performance_config.hpp  performance_counters.hpp  resnet_inference.hpp  test_utils.hpp
hw/sim/cpp/src/: accelerator_driver.cpp  axi_master.cpp  bsr_packer.cpp  golden_models.cpp  memory_manager.cpp  performance_counters.cpp  resnet_inference.cpp
hw/sim/cpp/tests/: test_axi_transactions.cpp  test_bsr_packer.cpp  test_end_to_end.cpp  test_golden_models.cpp  test_performance.cpp  test_platform_performance.cpp  test_stress.cpp
hw/sim/cpp/verilator/: tb_accel_top.cpp  tb_mac8.cpp  tb_pe.cpp  tb_systolic_array.cpp
rtl/buffer/: act_buffer.sv  wgt_buffer.sv
rtl/control/: bsr_scheduler.sv  csr.sv  csr.v  scheduler.sv
rtl/dma/: axi_dma_master.sv  bsr_dma.sv
rtl/mac/: mac8.sv
rtl/systolic/: systolic_array.sv
rtl/top/: accel_top.sv  accel_top.v  accel_top_dual_clk.sv  top_sparse.sv
scripts/: ci_verilator.sh
sw/host/: accel.py
sw/host_axi/: csr_map.py
testbench/integration/: test_stress.cpp
testbench/unit/integration/: tb_systolic_array.sv
testbench/unit/unit/: tb_mac8.sv  tb_pe.sv
